# libsignal

./: Cargo.toml
rust/bridge/shared/: Cargo.toml
rust/bridge/shared/src/: protocol.rs
rust/gossip/: Cargo.toml  build.rs
rust/gossip/src/: gossip.rs  gossip_service.rs  gossip_storage.rs  lib.rs  service.rs
rust/gossip/src/proto/: gossip.proto
rust/protocol/: Cargo.toml
rust/protocol/src/: lib.rs  protocol.rs  session_cipher.rs
rust/protocol/src/proto/: wire.proto
