[package]
name = "gossip"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
libsignal-keytrans = { workspace = true }

prost = { workspace = true }
tonic = { workspace = true, default-features = false, features = ["codegen", "prost"] }

[build-dependencies]
prost-build = { workspace = true }
tonic-build = { workspace = true }

[lints]
workspace = true